// Copyright 2025 The Ray Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//  http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.


syntax = "proto3";

import "google/protobuf/timestamp.proto";

package ray.rpc.events;

// Message containing the execution information of a driver job. It can be used to
// capture the full state transition history.
//
// For static information associated with this event, see DriverJobDefinitionEvent.
message DriverJobLifecycleEvent {
  enum State {
    UNSPECIFIED = 0;
    CREATED = 1;
    FINISHED = 2;
  }

  // Status for submission jobs (jobs submitted via Ray Job Submission API).
  // Only populated when is_submission_job=true in DriverJobDefinitionEvent.
  enum SubmissionJobStatus {
    SUBMISSION_JOB_STATUS_UNSPECIFIED = 0;
    PENDING = 1;    // Job submitted, waiting for runtime env setup
    RUNNING = 2;    // Job is currently running
    STOPPED = 3;    // Job stopped by user
    SUCCEEDED = 4;  // Job completed successfully
    FAILED = 5;     // Job failed
  }

  message StateTransition {
    State state = 1;
    google.protobuf.Timestamp timestamp = 2;
    string message = 3;
    string error_type = 4;
    optional int32 exit_code = 5;
    // For submission jobs only. Indicates the submission-level status.
    // Will be SUBMISSION_JOB_STATUS_UNSPECIFIED for non-submission jobs.
    SubmissionJobStatus submission_job_status = 6;
  }

  bytes job_id = 1;
  // This records the state transitions within each export interval. The consumer should
  // concatenate these intervals over the nodeâ€™s lifetime to reconstruct the complete
  // state transition time series.
  repeated StateTransition state_transitions = 2;
}
